manifests/go/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-go-api
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: simple-go-api.garinichsan.com
    http:
      paths:
      - backend:
          service:
            name:  api
            port:
              number: 80
        path: /
        pathType: Prefix
  tls: 
      - secretName: tls
        hosts:
        - "*.garinichsan.com"
